# glue-job-python

./: pyproject.toml
cdk/: .env  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
resources/: raw.csv
src/: glue-job-script.py
